VISUALC8_0_FILES = \
        Windows/VisualC8_0/OpenVRML/OpenVRML.sln \
        Windows/VisualC8_0/OpenVRML/antlr/antlr.vcproj \
        Windows/VisualC8_0/OpenVRML/openvrml/openvrml.vcproj \
        Windows/VisualC8_0/OpenVRML/openvrml/openvrml-config.h \
        Windows/VisualC8_0/OpenVRML/openvrml/openvrml.rc \
        Windows/VisualC8_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj \
        Windows/VisualC8_0/OpenVRML/openvrml-gl/openvrml-gl-config.h \
        Windows/VisualC8_0/OpenVRML/openvrml-gl/openvrml-gl.rc \
        Windows/VisualC8_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj

VISUALC9_0_FILES = \
        Windows/VisualC9_0/OpenVRML/OpenVRML.sln \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc \
        Windows/VisualC9_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj

EXTRA_DIST = $(VISUALC8_0_FILES) $(VISUALC9_0_FILES)
