VISUALC9_0_FILES = \
        Windows/VisualC9_0/OpenVRML/OpenVRML.sln \
        Windows/VisualC9_0/OpenVRML/javascript/javascript.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc \
        Windows/VisualC9_0/OpenVRML/parse-vrml97/parse-vrml97.vcproj \
        Windows/VisualC9_0/OpenVRML/parse-x3dvrml/parse-x3dvrml.vcproj \
        Windows/VisualC9_0/OpenVRML/pretty-print/pretty-print.vcproj \
        Windows/VisualC9_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj \
        Windows/VisualC9_0/OpenVRML/vrml97/vrml97.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-cad-geometry/x3d-cad-geometry.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-core/x3d-core.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-dis/x3d-dis.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-environmental-effects/x3d-environmental-effects.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-event-utilities/x3d-event-utilities.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-geometry2d/x3d-geometry2d.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-geospatial/x3d-geospatial.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-grouping/x3d-grouping.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-h-anim/x3d-h-anim.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-interpolation/x3d-interpolation.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-key-device-sensor/x3d-key-device-sensor.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-networking/x3d-networking.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-nurbs/x3d-nurbs.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-rendering/x3d-rendering.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-shape/x3d-shape.vcproj \
        Windows/VisualC9_0/OpenVRML/x3d-texturing/x3d-texturing.vcproj

EXTRA_DIST = $(VISUALC9_0_FILES)
