VISUALC9_0_FILES = \
        Windows/VisualC9_0/OpenVRML/OpenVRML.sln \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl-config.h \
        Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc \
        Windows/VisualC9_0/OpenVRML/parse-vrml97/parse-vrml97.vcproj \
        Windows/VisualC9_0/OpenVRML/parse-x3dvrml/parse-x3dvrml.vcproj \
        Windows/VisualC9_0/OpenVRML/pretty-print/pretty-print.vcproj \
        Windows/VisualC9_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj

EXTRA_DIST = $(VISUALC9_0_FILES)
