SUBDIRS = vrml

noinst_HEADERS = \
	vrml_Browser.h \
        vrml_Field.h \
        vrml_MField.h \
        vrml_ConstField.h \
        vrml_ConstMField.h \
        vrml_BaseNode.h \
        vrml_field_SFBool.h \
        vrml_field_SFColor.h \
        vrml_field_SFFloat.h \
        vrml_field_SFImage.h \
        vrml_field_SFInt32.h \
        vrml_field_SFNode.h \
        vrml_field_SFRotation.h \
        vrml_field_SFString.h \
        vrml_field_SFTime.h \
        vrml_field_SFVec2f.h \
        vrml_field_SFVec3f.h \
        vrml_field_MFColor.h \
        vrml_field_MFFloat.h \
        vrml_field_MFInt32.h \
        vrml_field_MFNode.h \
        vrml_field_MFRotation.h \
        vrml_field_MFString.h \
        vrml_field_MFTime.h \
        vrml_field_MFVec2f.h \
        vrml_field_MFVec3f.h \
        vrml_field_ConstSFBool.h \
        vrml_field_ConstSFColor.h \
        vrml_field_ConstSFFloat.h \
        vrml_field_ConstSFImage.h \
        vrml_field_ConstSFInt32.h \
        vrml_field_ConstSFNode.h \
        vrml_field_ConstSFRotation.h \
        vrml_field_ConstSFString.h \
        vrml_field_ConstSFTime.h \
        vrml_field_ConstSFVec2f.h \
        vrml_field_ConstSFVec3f.h \
        vrml_field_ConstMFColor.h \
        vrml_field_ConstMFFloat.h \
        vrml_field_ConstMFInt32.h \
        vrml_field_ConstMFNode.h \
        vrml_field_ConstMFRotation.h \
        vrml_field_ConstMFString.h \
        vrml_field_ConstMFTime.h \
        vrml_field_ConstMFVec2f.h \
        vrml_field_ConstMFVec3f.h \
        vrml_node_Node.h \
        vrml_node_Script.h

vrml_Browser.h: vrml/Browser.class
	javah vrml.Browser

vrml_Field.h: vrml/Field.class
	javah vrml.Field

vrml_MField.h: vrml/MField.class
	javah vrml.MField

vrml_ConstField.h: vrml/ConstField.class
	javah vrml.ConstField

vrml_ConstMField.h: vrml/ConstMField.class
	javah vrml.ConstMField

vrml_BaseNode.h: vrml/BaseNode.class
	javah vrml.BaseNode

vrml_field_SFBool.h: vrml/field/SFBool.class
	javah vrml.field.SFBool

vrml_field_SFColor.h: vrml/field/SFColor.class
	javah vrml.field.SFColor

vrml_field_SFFloat.h: vrml/field/SFFloat.class
	javah vrml.field.SFFloat

vrml_field_SFImage.h: vrml/field/SFImage.class
	javah vrml.field.SFImage

vrml_field_SFInt32.h: vrml/field/SFInt32.class
	javah vrml.field.SFInt32

vrml_field_SFNode.h: vrml/field/SFNode.class
	javah vrml.field.SFNode

vrml_field_SFRotation.h: vrml/field/SFRotation.class
	javah vrml.field.SFRotation

vrml_field_SFString.h: vrml/field/SFString.class
	javah vrml.field.SFString

vrml_field_SFTime.h: vrml/field/SFTime.class
	javah vrml.field.SFTime

vrml_field_SFVec2f.h: vrml/field/SFVec2f.class
	javah vrml.field.SFVec2f

vrml_field_SFVec3f.h: vrml/field/SFVec3f.class
	javah vrml.field.SFVec3f

vrml_field_MFColor.h: vrml/field/MFColor.class
	javah vrml.field.MFColor

vrml_field_MFFloat.h: vrml/field/MFFloat.class
	javah vrml.field.MFFloat

vrml_field_MFInt32.h: vrml/field/MFInt32.class
	javah vrml.field.MFInt32

vrml_field_MFNode.h: vrml/field/MFNode.class
	javah vrml.field.MFNode

vrml_field_MFRotation.h: vrml/field/MFRotation.class
	javah vrml.field.MFRotation

vrml_field_MFString.h: vrml/field/MFString.class
	javah vrml.field.MFString

vrml_field_MFTime.h: vrml/field/MFTime.class
	javah vrml.field.MFTime

vrml_field_MFVec2f.h: vrml/field/MFVec2f.class
	javah vrml.field.MFVec2f

vrml_field_MFVec3f.h: vrml/field/MFVec3f.class
	javah vrml.field.MFVec3f

vrml_field_ConstSFBool.h: vrml/field/ConstSFBool.class
	javah vrml.field.ConstSFBool

vrml_field_ConstSFColor.h: vrml/field/ConstSFColor.class
	javah vrml.field.ConstSFColor

vrml_field_ConstSFFloat.h: vrml/field/ConstSFFloat.class
	javah vrml.field.ConstSFFloat

vrml_field_ConstSFImage.h: vrml/field/ConstSFImage.class
	javah vrml.field.ConstSFImage

vrml_field_ConstSFInt32.h: vrml/field/ConstSFInt32.class
	javah vrml.field.ConstSFInt32

vrml_field_ConstSFNode.h: vrml/field/ConstSFNode.class
	javah vrml.field.ConstSFNode

vrml_field_ConstSFRotation.h: vrml/field/ConstSFRotation.class
	javah vrml.field.ConstSFRotation

vrml_field_ConstSFString.h: vrml/field/ConstSFString.class
	javah vrml.field.ConstSFString

vrml_field_ConstSFTime.h: vrml/field/ConstSFTime.class
	javah vrml.field.ConstSFTime

vrml_field_ConstSFVec2f.h: vrml/field/ConstSFVec2f.class
	javah vrml.field.ConstSFVec2f

vrml_field_ConstSFVec3f.h: vrml/field/ConstSFVec3f.class
	javah vrml.field.ConstSFVec3f

vrml_field_ConstMFColor.h: vrml/field/ConstMFColor.class
	javah vrml.field.ConstMFColor

vrml_field_ConstMFFloat.h: vrml/field/ConstMFFloat.class
	javah vrml.field.ConstMFFloat

vrml_field_ConstMFInt32.h: vrml/field/ConstMFInt32.class
	javah vrml.field.ConstMFInt32

vrml_field_ConstMFNode.h: vrml/field/ConstMFNode.class
	javah vrml.field.ConstMFNode

vrml_field_ConstMFRotation.h: vrml/field/ConstMFRotation.class
	javah vrml.field.ConstMFRotation

vrml_field_ConstMFString.h: vrml/field/ConstMFString.class
	javah vrml.field.ConstMFString

vrml_field_ConstMFTime.h: vrml/field/ConstMFTime.class
	javah vrml.field.ConstMFTime

vrml_field_ConstMFVec2f.h: vrml/field/ConstMFVec2f.class
	javah vrml.field.ConstMFVec2f

vrml_field_ConstMFVec3f.h: vrml/field/ConstMFVec3f.class
	javah vrml.field.ConstMFVec3f

vrml_node_Node.h: vrml/node/Node.class
	javah vrml.node.Node

vrml_node_Script.h: vrml/node/Script.class
	javah vrml.node.Script

vrml97.jar: vrml
	jar cvf vrml.jar vrml
