SUBDIRS = src

METROWERKS_PROJECT_FILES = \
        macos/ImageReader.mcp \
        macos/ImageReader.mcp.xml \
        macos/LibANTLR.mcp \
        macos/LibANTLR.mcp.xml \
        macos/LibANTLR.prefix \
        macos/LibVRML97core.mcp \
        macos/LibVRML97core.mcp.xml \
        macos/LibVRML97.mcp \
        macos/LibVRML97.mcp.xml \
        macos/LibVRML97.prefix \
        macos/LibVRML97.rsrc.hqx \
        macos/sys/types.h

VISUALCPP_PROJECT_FILES = \
        win32/libvrml97core.dsp \
        win32/libvrml97core.dsw \
        win32/Makefile.win \
        win32/antlr/libantlr.dsp \
        win32/antlr/libantlr.dsw \
        win32/antlr/Makefile.win \
        win32/javascript/fdlibm.dsp \
        win32/javascript/jsinitarrayapi.c \
        win32/javascript/libjavascript.dsp \
        win32/javascript/libjavascript.dsw \
        win32/javascript/Makefile.win

EXTRA_DIST = $(METROWERKS_PROJECT_FILES) $(VISUALCPP_PROJECT_FILES)
