SUBDIRS = src

# you're supposed to be able to put directory names
# in the EXTRA_DIST target, but version 1.4 of automake
# has a bug and version 1.5 hasn't been released yet.
# sigh.
#
EXTRA_DIST = \
  wrl/Anchor.wrl \
  wrl/Click.wrl \
  wrl/EventPROTO.wrl \
  wrl/ExternPROTO.wrl \
  wrl/Inline.wrl \
  wrl/Prox1.wrl \
  wrl/RefractiveMaterial.wrl \
  wrl/SimplePROTO.wrl \
  wrl/bounce.wrl \
  wrl/click.wav \
  wrl/groundPlane.wrl \
  wrl/jsTouch.wrl \
  wrl/orbit3.wrl \
  wrl/pixtex1.wrl \
  wrl/rotation_toy.wrl \
  wrl/scale.wrl \
  wrl/snoman.wrl \
  wrl/textures/LE1.jpg \
  wrl/textures/mercury.jpg \
  wrl/textures/solar.jpg \
  wrl/textures/venus.jpg
