AC_INIT(src/lookat.cpp)

PACKAGE=lookat
VERSION=0.8.0
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl AM_MAINTAINER_MODE

dnl Make sure we can compile stuff
AC_PROG_CXX
AC_PROG_CXXCPP

dnl Test for libvrml97 (also checks for X, OpenGL, glut, libjpeg, libpng)
AM_PATH_VRMLGL(, AC_MSG_ERROR([Missing libvrml97gl or one of its dependencies. See 'config.log' for details.]))

AC_OUTPUT(Makefile \
          src/Makefile)

