SUBDIRS = audio textures

#
# If you add or remove models, be sure to add/remove the appropriate entry here.
#
EXTRA_DIST = \
	Anchor.wrl \
	Click.wrl \
	EventPROTO.wrl \
	ExternPROTO.wrl \
	Inline.wrl \
	Prox1.wrl \
	RefractiveMaterial.wrl \
	SimplePROTO.wrl \
	TestJSAI.java \
	TestJSAI.wrl \
	bounce.wrl \
	groundPlane.wrl \
	jsTouch.wrl \
	orbit3.wrl \
	pixtex1.wrl \
	rotation_toy.wrl \
	scale.wrl \
	snoman.wrl \
	warbird.wrl
